Move jlink command generation into project